1.5/1.5.02/deployment_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxback
  template:
    metadata:
      labels:
        app: nginxback
    spec:
      containers:
      - name: nginxback
        image: wbitt/network-multitool
        # env:
        # - name: http-port
        #   value: "80"
        ports:
        - containerPort: 80
          name: http-port
        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html
      volumes:
        - name: data
          emptyDir: {}
