1.5/1.5.02/deployment_front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxfront
  template:
    metadata:
      labels:
        app: nginxfront
    spec:
      containers:
      - name: nginxfront
        image: nginx
        ports:
        - containerPort: 80
          name: nginx
        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html
      volumes:
        - name: data
          emptyDir: {}
