1.5/1.5.02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxfront
spec:
  selector:
    app: nginxfront
  type: NodePort
  ports:
  - name: nginx
    protocol: TCP
    port: 80
