1.5/1.5.02/service1180.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxback
spec:
  selector:
    app: nginxback
  type: NodePort
  ports:
  - name: http-port
    protocol: TCP
    port: 80
