1.5/1.5.02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx
  rules:
  - host: avd70.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginxfront
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nginxback
            port:
              number: 80
